--- a/src/styles/thumb.module.css
+++ b/src/styles/thumb.module.css
@@ -1,11 +1,35 @@
 .thumb {
     width: 340px;
     height: 340px;
-    border: 1px solid black;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+}
+
+.thumb>* {
+    z-index: 2;
 }
 
 .thumb img {
     object-fit: cover;
     width: 100%;
     height: 100%;
+}
+
+.thumb::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    z-index: 1;
+}
+
+.thumb p {
+    position: relative;
+    top: -40px;
+    color: white;
+    margin: 0 10px;
 }
