--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -4,6 +4,9 @@
     border-radius: 15px;
     overflow: hidden;
     margin: 1em 0;
+    background: center / cover no-repeat url("../assets/banner.png");
+    background-clip: content-box;
+    position: relative;
 }
 
 .banner p {
@@ -14,20 +17,15 @@
     color: white;
 }
 
-.overlay {
+.banner::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 1;
-    position: relative;
-}
-
-.backgroundImage {
-    position: relative;
-    top: -100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 100%;
-    background: center / cover no-repeat url("../assets/banner.png");
-    background-clip: content-box;
 }
 
 .thumbs {
