--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -6,6 +6,8 @@
     align-items: center;
     color: var(--primary-color);
     font-weight: 500;
+    width: 80%;
+    margin: 1em auto;
 }
 
 .header span {
