--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,3 +1,10 @@
+@import './vars.css';
+
+main {
+    width: 80%;
+    margin: auto;
+}
+
 .banner {
     width: 100%;
     height: 223px;
@@ -15,6 +22,7 @@
     text-align: center;
     z-index: 2;
     color: white;
+    font-size: var(--h1-font-size);
 }
 
 .banner::after {
@@ -31,6 +39,5 @@
 .thumbs {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 2em;
+    justify-content: space-between;
 }
