--- a/src/styles/dropdown.module.css
+++ b/src/styles/dropdown.module.css
@@ -11,11 +11,28 @@
 }
 
 .chevron {
-    transform: rotate(180deg);
     width: 20px;
+    transform: rotate(180deg);
+    transition: transform 250ms ease-in;
+}
+
+.chevron.chevronOpen {
+    transform: rotate(0deg);
 }
 
 p {
     color: var(--primary-color);
     padding: 10px;
+    transition: all 250ms ease-in;
+}
+
+.open {
+    /* opacity: 1; */
+    max-height: 100px;
+}
+
+.close {
+    /* transform: scaleY(0); */
+    max-height: 0px;
+
 }
