--- a/src/styles/carousel.module.css
+++ b/src/styles/carousel.module.css
@@ -26,7 +26,7 @@
     position: absolute;
     text-indent: -10000px;
     width: 48px;
-    height: 415px;
+    height: 435px;
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -40,4 +40,12 @@
 .rightArrow {
     right: 12%;
     background: url(../assets/right-arrow.png) center center / 48px 80px no-repeat;
+}
+
+.pagination {
+    position: relative;
+    left: 50%;
+    top: 400px;
+    color: white;
+    font-weight: 500;
 }
