--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -17,6 +17,7 @@
 .header a {
     text-decoration: none;
     margin: 0 10px;
+    font-size: 1.1rem;
 }
 
 .header a:visited {
@@ -25,4 +26,18 @@
 
 .header a.currentPageLink {
     text-decoration: underline;
+}
+
+@media screen and (max-width: 576px) {
+    .header {
+        width: 100%;
+    }
+
+    .header svg {
+        height: 47px;
+    }
+
+    .header a {
+        font-size: 0.6rem;
+    }
 }
