--- a/src/styles/dropdown.module.css
+++ b/src/styles/dropdown.module.css
@@ -31,6 +31,7 @@
     border: none;
     display: flex;
     width: 100%;
+    font-size: .9rem;
 }
 
 .textContent {
@@ -81,5 +82,11 @@ li {
     to {
         opacity: 0;
         transform: translateY(-50px);
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .dropdown button {
+        font-size: 0.7rem;
     }
 }
