--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,44 +1,22 @@
 @import './vars.css';
 
 main {
-    width: 80%;
+    width: var(--content-width);
     margin: auto;
-}
-
-.banner {
-    width: 100%;
-    height: 223px;
-    border-radius: 15px;
-    overflow: hidden;
-    margin: 1em 0;
-    background: center / cover no-repeat url("../assets/banner.png");
-    background-clip: content-box;
-    position: relative;
-    display: flex;
-    align-items: center;
-}
-
-.banner p {
-    margin: auto;
-    z-index: 2;
-    color: white;
-    font-size: var(--h1-font-size);
-    text-align: center;
-}
-
-.banner::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1;
 }
 
 .thumbs {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 900px) {
+    main {
+        width: 95%;
+    }
+
+    .thumbs {
+        justify-content: center;
+    }
 }
