--- a/src/styles/accommodation.module.css
+++ b/src/styles/accommodation.module.css
@@ -21,19 +21,47 @@
     margin: 10px 0;
 }
 
+.informations {
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+}
+
 .dropdowns {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     gap: 2em;
+    flex-wrap: wrap;
 }
 
 .dropdowns>* {
     flex: 1;
 }
 
-.flexDivs {
+.titleAndTag,
+.nameAndRate {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    flex-direction: column;
+}
+
+.nameAndRate {
+    align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+
+    .dropdowns {
+        gap: 1rem;
+    }
+
+    .informations {
+        flex-direction: column;
+    }
+
+    .nameAndRate {
+        flex-direction: row-reverse;
+    }
 }
