--- a/src/styles/errorPage.module.css
+++ b/src/styles/errorPage.module.css
@@ -3,20 +3,36 @@
 .errorPage {
     margin: auto;
     text-align: center;
-    max-width: 1240px;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
-.errorPage p,
-.errorPage a {
+.message,
+.homelink {
     color: var(--primary-color);
     font-weight: 500;
 }
 
-.errorPage p:first-of-type {
+.title {
     font-weight: 700;
     font-size: 288px;
+    margin-top: 20%;
+    color: var(--primary-color);
 }
 
 .errorPage p:last-of-type {
     font-size: 36px;
+    margin-top: 5%;
+}
+
+.homelink {
+    display: block;
+    margin-top: 15%;
+}
+
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 5.5rem;
+    }
 }
