--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -18,6 +18,7 @@
     text-decoration: none;
     margin: 0 10px;
     font-size: 1.1rem;
+    color: var(--primary-color);
 }
 
 .header a:visited {
