--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -10,6 +10,9 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    background: #F6F6F6;
+    padding: 3%;
+    border-radius: 25px;
 }
 
 @media screen and (max-width: 900px) {
