--- a/src/styles/dropdown.module.css
+++ b/src/styles/dropdown.module.css
@@ -44,6 +44,8 @@
     top: -5px;
     z-index: -1;
     background-color: #F6F6F6;
+    padding: 20px 10px;
+    line-height: 130%;
 }
 
 .textContent[animationOpen] {
